# ijat2026

./: .gitignore  DATASET_REQUIREMENTS_CANMPC.md  Makefile  README.md  cca-nmpc-implementation-plan.md  docker-compose.yml
docs/: README.md  (+14 more)
rai_ros2/src/canmpc_costmap_layers/: CMakeLists.txt  canmpc_costmap_layers.xml  package.xml
rai_ros2/src/canmpc_costmap_layers/include/canmpc_costmap_layers/: human_semantic_layer.hpp
rai_ros2/src/canmpc_costmap_layers/src/: human_semantic_layer.cpp
rai_ros2/src/canmpc_costmap_layers/test/: test_human_semantic_layer.cpp
rai_ros2/src/ccanmpc_costmap_layers/: CMakeLists.txt  ccanmpc_costmap_layers.xml  package.xml
rai_ros2/src/ccanmpc_costmap_layers/include/ccanmpc_costmap_layers/: human_semantic_layer.hpp
rai_ros2/src/ccanmpc_costmap_layers/src/: human_semantic_layer.cpp
rai_ros2/src/ccanmpc_costmap_layers/test/: test_human_semantic_layer.cpp
rai_ros2/src/depend/navigation2-humble/ca_nmpc_controller/: CMakeLists.txt  ca_nmpc_controller.xml  package.xml
rai_ros2/src/depend/navigation2-humble/cca_nmpc_controller/: CMakeLists.txt  cca_nmpc_controller.xml  package.xml
rai_ros2/src/rai_canmpc_controller/: CMakeLists.txt  package.xml  rai_canmpc_controller.xml
rai_ros2/src/rai_canmpc_controller/include/rai_canmpc_controller/: canmpc_controller.hpp  costmap_evaluator.hpp  human_estimator_node.hpp  local_plan_handler.hpp  mecanum_model.hpp
rai_ros2/src/rai_canmpc_controller/src/: canmpc_controller.cpp  local_plan_handler.cpp  mecanum_model.cpp
rai_ros2/src/rai_canmpc_controller/test/: test_costmap_evaluator.cpp  test_local_plan_handler.cpp  test_mecanum_model.cpp  test_solver_wrapper.cpp
rai_ros2/src/rai_ccanmpc_controller/: CMakeLists.txt  package.xml
rai_ros2/src/rai_ccanmpc_controller/config/: rai_ccanmpc_controller.yaml
rai_ros2/src/rai_ccanmpc_controller/include/rai_ccanmpc_controller/: ccanmpc_core.hpp
rai_ros2/src/rai_ccanmpc_controller/launch/: jetson_runtime.launch.py  rai_ccanmpc_controller.launch.py
rai_ros2/src/rai_ccanmpc_controller/msg/: HumanState.msg  HumanStates.msg
rai_ros2/src/rai_ccanmpc_controller/src/: ccanmpc_core.cpp  rai_ccanmpc_controller_node.cpp
rai_ros2/src/rai_dataset_collection/: COLLECTION_PROTOCOL.md  MANUAL_SCENARIOS.md  README.md  SETUP_GUIDE.md  package.xml  setup.py
rai_ros2/src/rai_dataset_collection/launch/: dataset_collection.launch.py
rai_ros2/src/rai_dataset_collection/rai_dataset_collection/: __init__.py  context_monitor.py  dataset_collector_node.py  trajectory_executor.py
rai_ros2/src/rai_dataset_collection/scripts/: run_all_scenarios.sh  start_collection.sh  verify_dataset.py
rai_ros2/src/rai_human_perception/: CMakeLists.txt  README.md  package.xml
rai_ros2/src/rai_human_perception/config/: kalman.yaml  perception.yaml
rai_ros2/src/rai_human_perception/include/rai_human_perception/: depth_association.hpp  human_state_estimator.hpp  kalman_tracker.hpp  types.hpp  yolo_detector.hpp
rai_ros2/src/rai_human_perception/launch/: export_engine.launch.py  perception.launch.py
rai_ros2/src/rai_human_perception/msg/: ContextInput.msg  HumanArray.msg  HumanState.msg
rai_ros2/src/rai_human_perception/scripts/: benchmark_engine.py  export_engine.py
rai_ros2/src/rai_human_perception/src/: depth_association.cpp  human_state_estimator.cpp  kalman_tracker.cpp  perception_node.cpp  yolo_detector.cpp
rai_ros2/src/rai_navigation/rai_controller/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_controller/config/: rai_controller.yaml
rai_ros2/src/rai_navigation/rai_controller/docs/: rai_controller_model.md
rai_ros2/src/rai_navigation/rai_controller/launch/: rai_controller.launch.py
rai_ros2/src/rai_navigation/rai_controller/msg/: AdaptiveBounds.msg  Context.msg  HumanState.msg  HumanStates.msg  SolverStats.msg
rai_ros2/src/rai_navigation/rai_controller/src/: controller_algorithm.cpp  rai_controller_server.cpp
rai_ros2/src/rai_navigation/rai_controller/srv/: GetCostmap.srv  GetNavigationStatus.srv  ListAlgorithms.srv  NavigateToPose.srv  SetController.srv  SetPlanner.srv
rai_ros2/src/rai_navigation/rai_controller_cca_nmpc/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_controller_cca_nmpc/docs/: rai_controller_cca_nmpc.md
rai_ros2/src/rai_navigation/rai_controller_cca_nmpc/src/: ccanmpc_core.cpp  human_predictor.cpp
rai_ros2/src/rai_navigation/rai_navigation/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_navigation/config/: rai_navigation.yaml
rai_ros2/src/rai_navigation/rai_navigation/docs/: rai_navigation_contract.md
rai_ros2/src/rai_navigation/rai_navigation/launch/: rai_navigation.launch.py
rai_ros2/src/rai_navigation/rai_planner/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_planner_a_star/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_planner_dijkstra/: CMakeLists.txt  package.xml
rai_ros2/src/rai_navigation/rai_planner_straight_line/: CMakeLists.txt  package.xml
rai_ros2/src/rai_robot_navigation/: CMakeLists.txt  package.xml
rai_ros2/src/rai_robot_navigation/launch/: bringup_launch.py
rai_ros2/src/rai_robot_navigation/param/: rai_robot_navigation.yaml
rai_ros2/src/rai_runtime_bridge/: package.xml  setup.cfg  setup.py
rai_ros2/src/rai_runtime_bridge/launch/: bridge.launch.py
rai_ros2/src/rai_runtime_bridge/rai_runtime_bridge/: main.py  node.py
rai_ros2/src/rai_runtime_bridge/resource/: rai_runtime_bridge
rai_ros2/src/rai_simulation/rai_dataset_tools/: bag_reader.py  bag_to_parquet.py  build_run_index.py  dataset_split.py  extract_controller_samples.py  extract_human_prediction_samples.py  package.xml  process_dataset.py  setup.py  sync_topics.py  validate_bag.py
rai_ros2/src/rai_simulation/rai_gazebo_worlds/: CMakeLists.txt  package.xml
rai_ros2/src/rai_web_api/: .gitignore  package.xml  setup.cfg  setup.py
rai_ros2/src/rai_web_api/frontend/: app.css  app.js  index.html
rai_ros2/src/rai_web_api/launch/: web_api.launch.py
rai_ros2/src/rai_web_api/rai_web_api/: __init__.py  database.py  main.py  node.py  research_dataset_spec.py  webrtc.py
(+676 files in other folders)
