<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccanmpc_costmap_layers</name>
  <version>0.0.0</version>
  <description>Custom local costmap layers for CA-NMPC human-aware navigation</description>
  <maintainer email="thientn204@todo.todo">thientn204</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>ccanmpc_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_costmap_2d plugin="${prefix}/ccanmpc_costmap_layers.xml" />
  </export>
</package>
