<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_dataset_collection</name>
  <version>1.0.0</version>
  <description>
    Dataset collection for Continuous Context-Adaptive CA-NMPC training and validation.
    Records LiDAR, RGB-D camera, odometry, Mecanum commands, continuous context,
    human state estimates, adaptive bounds, solver stats, and local costmap data.
  </description>
  <maintainer email="thientn204@utc.edu.vn">Nguyen Ngoc Thien</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rosbag2_py</depend>
  <depend>tf2_ros</depend>
  <depend>turn_on_rai_robot</depend>
  <depend>rai_slam_toolbox</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
