<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_robot_navigation</name>
  <version>0.1.0</version>
  <description>Robot bringup for the Nav2-free RAI navigation stack.</description>
  <maintainer email="thientn204@todo.todo">thientn204</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rai_navigation</exec_depend>
  <exec_depend>rai_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
