<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_web_api</name>
  <version>1.0.0</version>
  <description>Hub-only FastAPI facade for the RAI website, database metadata, and runtime bridge proxying</description>
  <maintainer email="thientn204@utc.edu.vn">Nguyen Ngoc Thien</maintainer>
  <license>MIT</license>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-sqlalchemy</exec_depend>
  <exec_depend>python3-asyncpg</exec_depend>
  <exec_depend>python3-aiosqlite</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
