<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_planner_straight_line</name>
  <version>0.1.0</version>
  <description>Straight-line planner algorithm package for RAI navigation.</description>
  <maintainer email="thientn204@todo.todo">thientn204</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rai_planner</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
