<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_dataset_tools</name>
  <version>1.0.0</version>
  <description>Dataset processing and extraction tools for CCA-NMPC</description>
  <maintainer email="thientn204@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
