<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_gazebo_worlds</name>
  <version>1.0.0</version>
  <description>Gazebo simulation worlds for Continuous Context-Adaptive CA-NMPC</description>
  <maintainer email="thientn204@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
